@@ -32,5 +32,5 @@ func init() {
 // AssetCoredns returns asset data.
 // This is the base64 encoded gzipped contents of ../metricbeat/module/coredns.
 func AssetCoredns() string {
-	return "eJy8lU9P4zwQxu/9FI96otJLXu1qxSHS7gUOy2FZtPABcO0ptUjtMDMBhU+/cv5AiKIGpHZ9nMbP8/MzHvcUD1TnsJHJBVkA6rWgHMuuslwAjsSyL9XHkOPHAkD/PX5FVxW0AJgKMkI51qRmAWw8FU7y5uNTBLOjoUlaWpeU455jVXaVCZ+07rp9d7AxqPFBIGrUi3or0K1RPBMTmIzDhuOuMbq4uukUhihDnCQir9UpoD1QaZ1P4DAVRslBI3RLPQmE+MlbGmwfB9avMe2QuDTB28zGKmimUU3x7qv+BEUM96Mf9hyiWbdJDKHarYkRN62RTDK4IBnTY0WixyN5rIhrNPKzEK5ik+QyIftRik3kndEc/d5PQl5021KXS46WREDGblvuWWLxL5StayX5LO/UpjnYG/9Cqaedu8CHCZ3JZOMxOnz1estSWp66Ed6aJ2pG5uI31l4hNN/6xHAMRJwnzfeQJTFeYiCY4BrlD9FNEj1Q/RzZfQ7qZyycNAG1w5GkEl+qdI57iKSMQShjG90xEhvk1XuNEmucPwh4jNAa4be8WrvZFm7Mzhf14XhutwTjHKcHo9XukZRNkDKy4uQLvuPyGieX13gilvTOfFv9h69N+exd/Wy1ms/03z43+NP5Ivnuf2zSvyLxYeNtNfsW+3VB6TizY5Iu6mFBkmLSRiXkxgz/772CJUeNh6V5u1+jGcDJsnLlEpGxVFsuV4u/AQAA///NeLnx"
+	return "eJy0lk9P40gQxe/5FE85EQm82tWKg6XdCxyGwzAI+AC03RXSg91tqsqg8OlH7T8h8VgxMEkfy+73fn7VXckZnmidIg9M1ssMUKcFpZh3lfkMsCQ5u0pd8Cn+nwHo38f3YOuCZgBTQUYoRUZqZsDSUWElbV4+gzclbZvEpeuKUjxyqKuuMuIT10O37wF58GqcF4gadaIuF+jKKF6JCUzGYsmhbIwur+86hW2UbZwoIpvqGNAeqLguRnCYCqNkoQG6op4EQvzictraPgysX0PabeLKeJcneai9JhrUFDtv9V9QBP84eLDnI5p1H8Xg6zIjRli2RjLKYL0kTM81iR6P5LkmXqORn4SwNZsolwjlSVbnT6SjMCH7Sfnw0RTObWuC3gQrJxoe2ZRoraZD2uGTuvxoUsvApdF0Y/01ctnsP4XUZWxuX/gk+u/d+IM2j9C9n77OfppP3Bsl2VpJDt/xO/dGX+l2OMatuN5kE2+Go27srcwLNWPm8gcypxCavi6R4RiIuIiau5AVMd6CJxhvG+UP0Y0SPdH6NbD9HNS3UFhpAmoHSpSKfLHSOe4hkip4oYTzYI+R2FZevdcgscb5g4DHCK0Rfs+rtZts4dKUrlgfjud+RTDWMomg1e6RlI2XKrDi5G/8h6sbnFzd4IVY4qT+d3GKf5ry+U79fLGYzvQYkwW3nfpnZkv840B82DRbzb6jLiso/thM3op4Lg8LEhWjNmohO2T4a++JqzhoOCzN+3EaHHmczGtbzREYc82r+WL2KwAA//+nCxDn"
 }
