@@ -12,16 +12,23 @@
       type: long
       description: >
          Total query count
-    - name: dns.request.duration.sec
+    - name: dns.request.duration.sec.bucket
+      type: object
+      description: >
+         Request duration histogram buckets
+    - name: dns.request.duration.sec.sum
       type: long
       format: duration
       description: >
-         Duration to process each query
-    - name: dns.request.size.bytes
+         Requests duration, sum of durations
+    - name: dns.request.duration.sec.count
       type: long
-      format: bytes
       description: >
-         Size of requests in bytes
+         Requests duration, number of requests
+    - name: dns.request.size.bytes
+      type: object
+      description: >
+         Request Size histogram buckets
     - name: dns.request.do.count.total
       type: long
       description: >
@@ -47,10 +54,9 @@
       description: >
         The address family of the transport (1 = IP (IP version 4), 2 = IP6 (IP version 6))
     - name: dns.response.size.bytes
-      type: long
-      format: bytes
+      type: object
       description: >
-          Response size in bytes
+          Response Size histogram buckets
     - name: server
       type: keyword
       description: >
